@@ -733,6 +733,7 @@ Other memory:
 	* fs/ and lib/ subystem debug can not be selectively enabled/disabled
 	* Added vsnprintf
 	* Integrated uIP telnetd
+	* Add missing logic to readahead buffer logic
 </pre></ul>
 
 <table width ="100%">
