@@ -268,7 +268,6 @@ CONFIG_EXAMPLE_UIP_SMTP=n
 CONFIG_EXAMPLE_UIP_TELNETD=n
 CONFIG_EXAMPLE_UIP_WEBSERVER=y
 CONFIG_EXAMPLE_UIP_DHCPC=n
-CONFIG_EXAMPLE_UIP_RESOLV=n
 CONFIG_EXAMPLE_UIP_WEBCLIENT=n
 
 #
